# llmt

./: .gitignore  Dockerfile  README.md  curl_test.txt  docker-compose.yml  env.txt  pyproject.toml
dockerfiles/: daemon.json  docker-compose-apponly.yml  docker-compose-ollama.yml
notebooks/: emotions.ipynb  examples_01.ipynb  examples_02_pydantic.ipynb  hcp_01_datasets.ipynb  hcp_02_gpt4o.ipynb  hcp_datasets_01.ipynb  hcp_datasets_250401.ipynb  hcp_datasets_250701.ipynb  hcp_datasets_250729.ipynb  hcp_performance.ipynb  ollama.ipynb  openai.ipynb
notebooks/examples/: ollama.ipynb
notebooks/experiments/: export_data.ipynb  reproducibility.ipynb
notebooks/hcp/: hcp_02_gpt4o.ipynb  hcp_03_gpt4o_MH_PAT.ipynb  hcp_03_performance.ipynb  hcp_datasets_01.ipynb  hcp_performance.ipynb  hcp_prompt_ip.ipynb  hcp_prompt_mh.ipynb  hcp_prompt_op.ipynb  hcp_prompt_script.ipynb  hcp_prompt_script_02.ipynb  hcp_prompts_02.ipynb  hcp_prompts_03.ipynb
notebooks/ollama/: Ollama_run_models.ipynb  ollama_config.ipynb  ollama_performance.ipynb  ollama_structured_output.ipynb  ollama_structured_outputs.ipynb  performance_models-Copy1.ipynb  performance_models-Copy2.ipynb  performance_models-Copy3.ipynb  performance_models-Copy4.ipynb  performance_models.ipynb  performance_train.ipynb
notebooks/openai/: export_data.ipynb  openai.ipynb  performance_250721.ipynb  reproducibility.ipynb  train_performance_250701.ipynb  train_performance_250729.ipynb  train_predictions_250701.ipynb
notebooks/prompting/: hcp_prompt_mh.ipynb  hcp_prompt_op.ipynb  hcp_prompt_script_00.ipynb  (+4 more)
(+46 files in other folders)
