[project]
name = "llmt"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "andreas", email = "andreas_werdich@hms.harvard.edu" }
]
requires-python = ">=3.12.3"
dependencies = []

[project.scripts]
llmt = "llmt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
