[project]
name = "llmt"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "andreas", email = "andreas_werdich@hms.harvard.edu" }
]
requires-python = ">=3.12.3"
dependencies = [
    "datasets>=3.5.0",
    "gnews>=0.4.1",
    "nodejs>=0.1.1",
    "numpy>=2.2.4",
    "ollama>=0.4.7",
    "openai>=1.70.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.2",
    "python-dotenv>=1.1.0",
]

[tool.uv]
package = true

[project.scripts]
llmt = "llmt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
]
